--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biblioteca CECM JP</title>
     <link rel="stylesheet" href="style.css">
+
+
 </head>
 <body>
-    <nav></nav>
-    <selection class="content"></selection>
-    <footer></footer>
+    <nav>
+
+        <div class="nav__botao"></div>
+         <div class="nav__logo"></div>
+
+    </nav>
+    <section class="content">
+
+
+     <div class="content__imagen"></div>
+      <div class="content__apresentacao"></div>
+    </section
+    <footer>
+        <div class="footer__titulo"></div>
+        <div class="footer__imagen_direita"></div>
+        <div class="footer__imagen_esquerda"></div>
+        </div>
+    </footer>
+
+    
 </body>
 </html>
